test/fail/NoMain.s
# Wrong name for main
        
        .intel_syntax
        .globl not_m_a_i_n
not_m_a_i_n:
        ret

# EOF